# desktop

./: .eslintrc.cjs  .gitignore  CONTRIBUTING.md  DECISIONS.md  LICENSE  LICENSE.md  MIGRATION.md  README.md  REPORT.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_REVIEW.md  TEST_PLAN.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md  release_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/build-version/: action.yml  index.js  package.json
.github/workflows/: build.yml  ci.yml  release.yml  security.yml  test.yml
AI_REPORTS/: architecture.md  build-ci.md
PRs/: 10_kill_switch.md  11_logging.md  12_latency.md  13_network_monitoring.md  14_windows_kill_switch.md  15_macos_kill_switch.md  16_auto_reconnect.md  17_split_tunneling.md  18_health_dashboard.md
resources/linux/: install_snap_dependencies.sh  snapcraft.yaml  vpnht.desktop  vpnht.service  vpnht.spec
resources/linux/DEBIAN/: control  postinst  postrm  prerm
resources/macos/: distribution.xml  entitlements.plist  ht.vpn.client.plist  ht.vpn.service.plist  license.txt  welcome.html
resources/macos/scripts/: postinstall  preinstall
resources/windows/: setup.iss
resources/windows/post_install/: main.go
resources/windows/pre_uninstall/: main.go
scripts/uninstall/: macos.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  config.rs  crypto.rs  error.rs  health.rs  killswitch.rs  latency.rs  logging.rs  main.rs  network.rs  split_tunnel.rs  storage.rs  vpn.rs  wireguard.rs
src-tauri/src/commands/: killswitch.rs
src-tauri/src/killswitch/: macos.rs  mod.rs  windows.rs
src-tauri/src/vpn/: auto_reconnect.rs  mod.rs
src/components/: ErrorBoundary.tsx  Layout.tsx  ThemeProvider.tsx
src/hooks/: useAccessibility.ts
src/i18n/: index.ts
src/i18n/locales/: ar.json  bg.json  de.json  en.json  es.json  fr.json  he.json  ja.json  pt.json  ru.json  zh.json
src/pages/: Home.tsx  Login.tsx  Map.tsx  Servers.tsx  Settings.tsx
src/stores/: index.ts
src/styles/locales/: de.json  fr.json  zh.json
src/types/: index.ts
src/utils/: api.ts  config.ts  helpers.ts  index.ts  killswitch.ts
tests/: app.test.tsx  config.test.ts  helpers.test.ts  vpn-flow.test.ts
tests/stores/: auth.test.ts  connection.test.ts  server.test.ts  settings.test.ts
tests/utils/: helpers.test.ts
