[package]
name = "vpnht-desktop"
version = "2.0.0"
description = "VPNht Desktop Client - Secure VPN Connection"
authors = ["VPNht"]
license = "GPL-3.0"
repository = "https://github.com/VPNht/desktop"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
ring = { version = "0.17", features = ["std"] }
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
directories = "5"
once_cell = "1"
thiserror = "1"
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
tokio = { version = "1", features = ["process", "rt"] }

[target.'cfg(target_os = "macos")'.dependencies]
tokio = { version = "1", features = ["process", "rt"] }

[target.'cfg(target_os = "windows")'.dependencies]
tokio = { version = "1", features = ["process", "rt"] }
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
