[package]
name = "vpnht-desktop"
version = "0.2.0"
description = "VPNht Desktop Client - Phase 2"
authors = ["VPNht Team"]
edition = "2021"
rust-version = "1.70"

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
keyring = "2.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
template = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
