[package]
name = "vpnht-desktop"
version = "0.2.0"
description = "VPNht Desktop Client - Phase 2"
authors = ["VPNht Team"]
edition = "2021"
rust-version = "1.70"

[dependencies]
tauri = { version = "1.5", features = [ "process-relaunch", "window-start-dragging", "window-hide", "window-minimize", "path-all", "http-all", "os-all", "window-unmaximize", "window-maximize", "dialog-save", "window-unminimize", "window-show", "dialog-open", "shell-open", "notification-all", "system-tray", "updater"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
keyring = "4.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

[workspace]
